@@ -1,4 +1,4 @@
-# This file was automatically generated by Dist::Zilla::Plugin::MakeMaker v6.007.
+# This file was automatically generated by Dist::Zilla::Plugin::MakeMaker v6.008.
 use strict;
 use warnings;
 
@@ -40,7 +40,7 @@ my %WriteMakefileArgs = (
     "ExtUtils::MakeMaker" => 0,
     "File::Spec" => 0,
     "Test::DZil" => 0,
-    "Test::More" => "0.89",
+    "Test::More" => 0,
     "constant" => 0
   },
   "VERSION" => "1.004005",
@@ -68,7 +68,7 @@ my %FallbackPrereqs = (
   "MooseX::Types::Moose" => 0,
   "Path::Tiny" => 0,
   "Test::DZil" => 0,
-  "Test::More" => "0.89",
+  "Test::More" => 0,
   "YAML::Tiny" => 0,
   "constant" => 0,
   "namespace::autoclean" => 0,
