@@ -19,6 +19,8 @@ mantissa         = 6
 twitter_extra_hash_tags = #distzilla
 bumpversions      = 1
 srcreadme         = mkdn
+Test::Compile::PerFile.:version = 0.003902
+Test::Compile::PerFile.test_template = 02-raw-require.t.tpl
 
 ;version_major     = 0
 ;version_minor     = 1
