@@ -1,6 +1,8 @@
 This file contains changes in REQUIRED dependencies for standard CPAN phases (configure/build/runtime/test)
 
 1.004005
+ [Changed / test requires]
+ - Test::More 0.89 → 0
 
 1.004004 2016-09-10T10:08:39Z
 
